Make the Ant offline-instrumentation example to run each unit test case in isolation.